# RosTryOut

./: .gitignore  README.md  SetupROSContainer
.devcontainer/: Dockerfile  devcontainer.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_description/share/robot_description/: local_setup.sh  package.dsv  package.sh
install/robot_description/share/robot_description/urdf/: mobile_robot.urdf.xacro 
install/robot_simulation/share/robot_simulation/: package.sh
install/robot_simulation/share/robot_simulation/worlds/: empty.world
install/speech_to_text/share/speech_to_text/: local_setup.sh  package.ps1  package.sh
install/voice_command_node/share/voice_command_node/: local_setup.sh  package.bash  package.dsv  package.sh  package.zsh
install/voice_command_node/share/voice_command_node/cmake/: voice_command_nodeConfig.cmake
log/: latest_build
src/: bringup.launch.py
src/install/: local_setup.sh  setup.sh
src/install/robot_description/share/robot_description/: local_setup.sh  package.ps1  package.sh
src/install/robot_simulation/share/robot_simulation/: package.dsv  package.ps1  package.sh
src/install/speech_to_text/share/speech_to_text/: local_setup.sh  package.dsv  package.sh
src/install/voice_command_node/lib/voice_command_node/: voice_control.py
src/log/: latest_build
src/robot_description/: CMakeLists.txt  package.xml
src/robot_simulation/: CMakeLists.txt
src/speech_to_text/: CMakeLists.txt  package.xml
src/speech_to_text/scripts/: whisper_node.py
src/voice_command_node/: CMakeLists.txt
(+6 files in other folders)
