<?xml version="1.0"?>
<package format="3">
  <name>speech_to_text</name>
  <version>0.0.1</version>
  <description>Speech-to-text node using Whisper and publishing to /speech_text</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>ament_cmake</exec_depend>
</package>